--- a/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Introdução e conceitos básicos do CSS3/style.css
+++ b/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Introdução e conceitos básicos do CSS3/style.css
@@ -1,5 +1,16 @@
+body{
+    background: #ccc;
+}
+
 #title, .subtitle, .post-title{
     color: blue;
+}
+
+.post{
+    background: #fff;
+    padding: 10px;
+    border: 3px solid #000;
+    margin: 10px;
 }
 
 .post-title{
