--- a/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
+++ b/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
@@ -1,24 +1,39 @@
-body{
-    background: #ccc;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+
+body {
+    font-family: 'Open Sans', sans-serif !important;
 }
 
-.img-perfil{border-radius: 50%; margin-left: 50px;}
-
-.nav-link{color: #aaa !important;}.nav-link:hover{color: rgb(117, 117, 117) !important;}
-
-
-.subtitle, .post-title{
-    color: blue;
+nav.navbar {
+    background-color: rgb(51, 70, 82) !important;
+}
+.img-perfil {
+    border-radius: 50%;
+    margin-left  : 50px;
+}
+.nav-link {
+    color: #aaa !important;
+}
+.nav-link:hover {
+    color: rgb(117, 117, 117) !important;
 }
 
-.post{
+#title{
+    color: #262626;
+    font-size: 2rem;
+}
+.btn-info{
+    padding: 8px 80px !important;
+}
+
+.post {
     background: #fff;
-    padding: 10px;
-    border: 3px solid #000;
-    margin: 10px;
+    padding   : 10px;
+    border    : 3px solid #000;
+    margin    : 10px;
 }
 
-.post-title{
-    font-size: 16px;
+.post-title {
+    font-size : 16px;
     font-style: italic;
 }
