--- a/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
+++ b/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
-body {
+* {
     font-family: 'Open Sans', sans-serif !important;
+    text-decoration: none !important;
+    list-style-type: none;
+}
+
+a{
+    color: #000 !important;
 }
 
 nav.navbar {
@@ -26,14 +32,16 @@ nav.navbar {
     padding: 8px 80px !important;
 }
 
-.post {
-    background: #fff;
-    padding   : 10px;
-    border    : 3px solid #000;
-    margin    : 10px;
-}
-
 .post-title {
     font-size : 16px;
     font-style: italic;
+}
+
+#projetos{
+    background-color: rgb(104, 127, 141);
+    color: #fff;
+}
+
+#servicos img{
+    object-fit: cover;
 }
