--- a/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
+++ b/bootecamp-impulso-fullstack-web-developer/introducao-a-criacao-de-websites-com-html5-e-css3/Construindo páginas para internet com Bootstrap/Utilizando Bootestrap na página WEB/style.css
@@ -3,7 +3,7 @@
 * {
     font-family: 'Open Sans', sans-serif !important;
     text-decoration: none !important;
-    list-style-type: none;
+    /* list-style-type: none; */
 }
 
 a{
@@ -45,3 +45,6 @@ nav.navbar {
 #servicos img{
     object-fit: cover;
 }
+
+dt{color:blue}
+dl{color:red}
